# coding-practices

./: .gitignore  README.md
a-star/: CMakeLists.txt  a_star.cpp  test_a_star.cpp  test_inputs.txt
bitset/: CMakeLists.txt  bitset.cpp  test_bitset.cpp
breadth-first-search/: CMakeLists.txt  bfs.cpp  test_bfs.cpp  test_inputs.txt
depth-first-search/: CMakeLists.txt  dfs_iterative.cpp  dfs_recursive.cpp  test_dfs_iterative.cpp  test_dfs_recursive.cpp  test_inputs_iterative.txt  test_inputs_recursive.txt
hashtable/: CMakeLists.txt  hashtable.cpp  test_hashtable.cpp
list/: CMakeLists.txt  list.cpp  test_list.cpp
prime-sieve/: CMakeLists.txt  prime_sieve.cpp  prime_sieve_cli.cpp  test_prime_sieve.cpp
priorityqueue/: CMakeLists.txt  priorityqueue.cpp  test_priorityqueue.cpp
sizedqueue/: CMakeLists.txt  sizedqueue.cpp  test_sizedqueue.cpp
sizedstack/: CMakeLists.txt  sizedstack.cpp  test_sizedstack.cpp
sudoku-solver/: CMakeLists.txt  sudoku_solver.cpp  test_inputs.txt  test_sudoku_solver.cpp
